--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Portfolio of Creative Works | JO</title>
 </head>
 <body>
-    <header class="bg-timberwolf border-b-2 border-chocolatecosmos-default py-1 lg:py-5">
+    <header class="bg-timberwolf border-b-2 border-chocolatecosmos-default py-1 lg:py-5 lg:static sticky top-0">
         <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
             <div class="flex h-16 items-center justify-between">
                 <div class="flex-1 flex items-center gap-5 lg:gap-12">
