fix: add missing border to contact page header

--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
     </header>
     <main class=" pb-10">
 
-        <section class="bg-licorice-default text-white border-moonstone-default border-t-2 mb-10">
+        <section class="bg-licorice-default text-white border-moonstone-default border-y-2">
             <div class="mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:items-center">
                 <div class="mx-auto max-w-2xl text-center">
                     <h1 class="text-3xl font-extrabold text-moonstone-default lg:text-5xl">
@@ -142,6 +142,7 @@
             </div>
           </section>
 
+          <article class="border-t-2 border-chocolatecosmos-default pt-10">
         <section class="bg-white lg:w-2/6 lg:px-10 mx-4 lg:mx-auto text-black border-moonstone-default border-2 rounded-xl p-2 lg:p-9">
             <div class="mx-auto max-w-screen-xl px-4 py-6 lg:flex lg:items-center">
                 <div class="mx-auto max-w-2xl text-center">
@@ -172,6 +173,7 @@
                 
             </div>
           </section>
+          </article>
           
     </main>
     <footer class="bg-timberwolf border-t-2 border-chocolatecosmos-default">
