feat: add main content to about page feat: copy header and footer to about page feat: update logo on all pages fix: add missing figma images to evidence folder

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
             <div class="flex h-16 items-center justify-between">
                 <div class="flex-1 flex items-center gap-5 lg:gap-12">
-                    <img src="./assets/img/jo-custom-logo.png" alt="Logo" class="w-16 lg:w-20 h-auto p-1">
+                    <img src="./assets/img/jo-custom-logo-sym.png" alt="Logo" class="w-16 lg:w-20 h-auto p-1">
                     <h1 class="font-bold text-chocolatecosmos-default text-xl lg:text-2xl underline underline-offset-4 decoration-moonstone-default">jason<span class="text-black mx-0.5">.</span><span class="text-licorice-default">on</span></h1>
                 </div>
         
@@ -151,19 +151,19 @@
                 <section class="lg:w-1/2 p-4">
                     <a class="w-full max-w-2xl hover:bg-timberwolf hover:border-timberwolf border-2 border-moonstone-default p-9 block rounded-xl" href="./about.html">
                         <h4 class="text-xl mb-3">About</h4>
-                        <p>Here's some boring but necessary information about the purpose of this site, as well as other information that you may find interesting.</p>
+                        <p>Here's some boring but necessary information about myself and the purpose of this site, as well as any other interesting tidbits you should know.</p>
                     </a>
                 </section>
                 <section class="lg:w-1/2 p-4">
                     <a class="w-full max-w-2xl hover:bg-timberwolf hover:border-timberwolf border-2 border-moonstone-default p-9 block rounded-xl" href="./resume.html">
                         <h4 class="text-xl mb-3">Resumé</h4>
-                        <p>In case you're interested in my experiences and history, here's a copy of my resumé, or at least something that resembles one. I haven't been around much.</p>
+                        <p>In case you're interested in my experiences and history, here's a copy of my resumé, or at least something that resembles one. It's a work in progress sort of thing.</p>
                         </a>
                 </section>
                 <section class="lg:w-1/2 p-4">
                     <a class="w-full max-w-2xl hover:bg-timberwolf hover:border-timberwolf border-2 border-moonstone-default rounded-xl p-9 block" href="./contact.html">
                         <h4 class="text-xl mb-3">Contact</h4>
-                        <p>Want to pick my brain? Got a question for me? Here's how you can get in touch with me, if I feel like responding. Or not. Feel free to try.</p>
+                        <p>Want to pick my brain? Got a question for me? Here's how you can get in touch with me, if I feel like responding. Feel free to reach out.</p>
                     </a>
                 </section>
             </div>
@@ -172,7 +172,7 @@
     <footer class="bg-timberwolf border-t-2 border-chocolatecosmos-default">
         <div class="container px-6 pt-5 mx-auto">
             <div class="flex flex-col items-center text-center">
-                    <img class="w-14 lg:w-16 h-auto" src="./assets/img/jo-custom-logo.png" alt="Logo">
+                    <img class="w-14 lg:w-16 h-auto" src="./assets/img/jo-custom-logo-sym.png" alt="Logo">
     
                 <div class="flex flex-wrap justify-center mt-3 -mx-4">
                     <a href="./index.html" class="mx-3 text-licorice-default transition hover:text-chocolatecosmos-default">home</a>
