feat: add hover effects to home page content fix: change projects page hover effects to whole card fix: update home page quote

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:items-center">
                 <div class="mx-auto max-w-2xl text-center">
                     <h1 class="text-3xl font-extrabold text-moonstone-default lg:text-4xl">
-                        In a world devoid of meaning, creative pursuits alter the way we perceive the universe and guide us toward personal fulfillment.
+                        Creative pursuits alter the way we perceive the universe and guide us toward personal fulfillment.
                     </h1>
             
                     <p class="mx-auto mt-10 max-w-xl text-lg lg:text-2xl">
@@ -143,25 +143,25 @@
           <article class="flex flex-col gap-8 lg:pl-40 border-t-chocolatecosmos-default border-2">
             <div class="lg:flex flex-row flex-wrap justify-around my-4 lg:my-10">
                 <section class="lg:w-1/2 p-4">
-                    <a class="w-full max-w-2xl hover:bg-timberwolf hover:border-timberwolf border-2 border-moonstone-default p-9 block rounded-xl" href="./projects.html">
+                    <a class="w-full max-w-2xl hover:bg-timberwolf hover:border-timberwolf border-2 border-moonstone-default p-9 block rounded-xl transition lg:hover:scale-105 duration-300" href="./projects.html">
                         <h4 class="text-xl mb-3">Projects</h4>
                         <p>Being creative is one of my simple pleasures in life. I love expressing myself through creative endeavors and mundane work. Here is just a small collection of that work.</p>
                     </a>
                 </section>
                 <section class="lg:w-1/2 p-4">
-                    <a class="w-full max-w-2xl hover:bg-timberwolf hover:border-timberwolf border-2 border-moonstone-default p-9 block rounded-xl" href="./about.html">
+                    <a class="w-full max-w-2xl hover:bg-timberwolf hover:border-timberwolf border-2 border-moonstone-default p-9 block rounded-xl transition lg:hover:scale-105 duration-300" href="./about.html">
                         <h4 class="text-xl mb-3">About</h4>
                         <p>Here's some boring but necessary information about myself and the purpose of this site, as well as any other interesting tidbits you should know.</p>
                     </a>
                 </section>
                 <section class="lg:w-1/2 p-4">
-                    <a class="w-full max-w-2xl hover:bg-timberwolf hover:border-timberwolf border-2 border-moonstone-default p-9 block rounded-xl" href="./resume.html">
+                    <a class="w-full max-w-2xl hover:bg-timberwolf hover:border-timberwolf border-2 border-moonstone-default p-9 block rounded-xl transition lg:hover:scale-105 duration-300" href="./resume.html">
                         <h4 class="text-xl mb-3">Resumé</h4>
                         <p>In case you're interested in my experiences and history, here's a copy of my resumé, or at least something that resembles one. It's a work in progress sort of thing.</p>
                         </a>
                 </section>
                 <section class="lg:w-1/2 p-4">
-                    <a class="w-full max-w-2xl hover:bg-timberwolf hover:border-timberwolf border-2 border-moonstone-default rounded-xl p-9 block" href="./contact.html">
+                    <a class="w-full max-w-2xl hover:bg-timberwolf hover:border-timberwolf border-2 border-moonstone-default rounded-xl p-9 block transition lg:hover:scale-105 duration-300" href="./contact.html">
                         <h4 class="text-xl mb-3">Contact</h4>
                         <p>Want to pick my brain? Got a question for me? Here's how you can get in touch with me, if I feel like responding. Feel free to reach out.</p>
                     </a>
