--- a/projects.html
+++ b/projects.html
@@ -143,13 +143,13 @@
           </section>
 
         <div class="lg:flex flex-wrap lg:w-5/6 lg:mx-auto lg:mr-5 lg:mt-8 p-2 lg:p-0">
-            <div class="lg:w-1/4 border-2 border-moonstone-default rounded-md flex flex-col gap-1 p-4 lg:m-5 mb-2">
+            <div class="lg:w-1/4 border-2 border-moonstone-default rounded-md flex flex-col gap-1 p-4 lg:m-5 mb-2 transition lg:hover:scale-105 duration-300 hover:opacity-90">
                 <div class="bg-timberwolf p-3 -m-4 mb-3">
                     <h4 class="text-bold text-xl place-self-center">Web Development</h4>
                 </div>
                 <div class="-m-4 mb-2">
                     <a href="./mywork.html">
-                        <img src="./assets/img/grand-slammers-thumbnail.png" alt="Website Design (Grand Slammers)" class="w-full h-auto border-x-0 border-2 border-moonstone-default transition-opacity duration-300 hover:opacity-60">
+                        <img src="./assets/img/grand-slammers-thumbnail.png" alt="Website Design (Grand Slammers)" class="w-full h-auto border-x-0 border-2 border-moonstone-default">
                     </a>
                 </div>
                 <div class="flex flex-col gap-2 mb-2">
