fix: update header nav dropdown to only display sample project page feat: add hover effect to desktop header nav fix: update resume date to be correct

--- a/resume.html
+++ b/resume.html
@@ -28,36 +28,12 @@
                                     <a class="text-licorice-default transition text-lg hover:text-chocolatecosmos-default"href="./projects.html">
                                         projects
                                     </a>
-                                    <div class="group-hover:block pt-5 border-b-4 border-moonstone-default absolute -left-5 hidden h-auto transition duration-1000 ease-in-out">
-                                        <ul class="top-0 w-24 bg-timberwolf px-2 py-4 gap-2 text-center">
+                                    <div class="group-hover:block pt-5 border-b-4 border-moonstone-default absolute -left-5 hidden h-auto transition ease-in-out lg:hover:scale-105 duration-300">
+                                        <ul class="top-0 w-24 bg-timberwolf px-2 py-2 gap-2 text-center">
                                             <li>
                                                 <a class="block text-black transition duration-500 ease-in-out hover:text-white rounded-xl hover:bg-licorice-default px-2 mb-2"
-                                                        href="">
-                                                    Phase 1
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a class="block text-black transition duration-500 ease-in-out hover:text-white rounded-xl hover:bg-licorice-default px-2 mb-2"
-                                                        href="">
-                                                    Phase 2
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a class="block text-black transition duration-500 ease-in-out hover:text-white rounded-xl hover:bg-licorice-default px-2 mb-2"
-                                                        href="">
-                                                    Phase 3
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a class="block text-black transition duration-500 ease-in-out hover:text-white rounded-xl hover:bg-licorice-default px-2 mb-2"
-                                                        href="">
-                                                    Phase 4
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a class="block text-black transition duration-500 ease-in-out hover:text-white rounded-xl hover:bg-licorice-default px-2 -mb-2"
-                                                        href="">
-                                                    Phase 5
+                                                        href="./mywork.html">
+                                                    GS Web
                                                 </a>
                                             </li>
                                         </ul>
@@ -176,7 +152,7 @@
                             <ul>
                                 <li>North Metropolitan TAFE - General I.T. (2023)</li>
                                 <li>North Metropolitan TAFE - Visual Arts (2016)</li>
-                                <li>Central TAFE (NMTAFE) - Graphic Design (2014)</li>
+                                <li>Central TAFE (NMTAFE) - Graphic Design (2015)</li>
                             </ul>
 
                             <h4 class="mb-2 text-xl font-semibold mt-6">Awards</h4>
