--- a/about.html
+++ b/about.html
@@ -28,39 +28,14 @@
                                     <a class="text-licorice-default transition text-lg hover:text-chocolatecosmos-default"href="./projects.html">
                                         projects
                                     </a>
-                                    <div class="group-hover:block pt-5 border-b-4 border-moonstone-default absolute -left-5 hidden h-auto transition duration-1000 ease-in-out">
+                                    <div class="group-hover:block pt-5 border-b-4 border-moonstone-default absolute -left-5 hidden h-auto transition ease-in-out lg:hover:scale-105 duration-300">
                                         <ul class="top-0 w-24 bg-timberwolf px-2 py-4 gap-2 text-center">
                                             <li>
                                                 <a class="block text-black transition duration-500 ease-in-out hover:text-white rounded-xl hover:bg-licorice-default px-2 mb-2"
-                                                        href="">
-                                                    Phase 1
+                                                        href="./mywork.html">
+                                                    GS Web
                                                 </a>
                                             </li>
-                                            <li>
-                                                <a class="block text-black transition duration-500 ease-in-out hover:text-white rounded-xl hover:bg-licorice-default px-2 mb-2"
-                                                        href="">
-                                                    Phase 2
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a class="block text-black transition duration-500 ease-in-out hover:text-white rounded-xl hover:bg-licorice-default px-2 mb-2"
-                                                        href="">
-                                                    Phase 3
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a class="block text-black transition duration-500 ease-in-out hover:text-white rounded-xl hover:bg-licorice-default px-2 mb-2"
-                                                        href="">
-                                                    Phase 4
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a class="block text-black transition duration-500 ease-in-out hover:text-white rounded-xl hover:bg-licorice-default px-2 -mb-2"
-                                                        href="">
-                                                    Phase 5
-                                                </a>
-                                            </li>
-                                        </ul>
                                     </div>
                                 </li>
                             </ul>
