feat: add hover effect and home navigation to header logo fix: update logo with new design fix: remove all older versions of logo docs: minor updates to resume documentation

--- a/mywork.html
+++ b/mywork.html
@@ -12,7 +12,9 @@
         <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
             <div class="flex h-16 items-center justify-between">
                 <div class="flex-1 flex items-center gap-5 lg:gap-12">
-                    <img src="./assets/img/jo-custom-logo-sym.png" alt="Logo" class="w-16 lg:w-20 h-auto p-1">
+                    <a href="./index.html">
+                        <img src="./assets/img/jo-custom-logo-moon-gray.png" alt="Logo" class="w-16 lg:w-20 h-auto p-1 transition lg:hover:scale-105 duration-300">
+                    </a>
                     <h1 class="font-bold text-chocolatecosmos-default text-xl lg:text-2xl underline underline-offset-4 decoration-moonstone-default">jason<span class="text-black mx-0.5">.</span><span class="text-licorice-default">on</span></h1>
                 </div>
         
@@ -185,7 +187,7 @@
     <footer class="bg-timberwolf border-t-2 border-chocolatecosmos-default">
         <div class="container px-6 pt-5 mx-auto">
             <div class="flex flex-col items-center text-center">
-                    <img class="w-14 lg:w-16 h-auto" src="./assets/img/jo-custom-logo-sym.png" alt="Logo">
+                    <img class="w-14 lg:w-16 h-auto" src="./assets/img/jo-custom-logo-moon-gray.png" alt="Logo">
     
                 <div class="flex flex-wrap justify-center mt-3 -mx-4">
                     <a href="./index.html" class="mx-3 text-licorice-default transition hover:text-chocolatecosmos-default">home</a>
