--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
             <div class="flex h-16 items-center justify-between">
                 <div class="flex-1 flex items-center gap-5 lg:gap-12">
-                    <img src="./assets/img/jo-custom-logo-sym.png" alt="Logo" class="w-16 lg:w-20 h-auto p-1">
+                    <a href="./index.html">
+                        <img src="./assets/img/jo-custom-logo-moon-gray.png" alt="Logo" class="w-16 lg:w-20 h-auto p-1 transition lg:hover:scale-105 duration-300">
+                    </a>
                     <h1 class="font-bold text-chocolatecosmos-default text-xl lg:text-2xl underline underline-offset-4 decoration-moonstone-default">jason<span class="text-black mx-0.5">.</span><span class="text-licorice-default">on</span></h1>
                 </div>
         
@@ -139,7 +141,7 @@
                 <section class="lg:w-1/2 p-4">
                     <a class="w-full max-w-2xl hover:bg-timberwolf hover:border-timberwolf border-2 border-moonstone-default rounded-xl p-9 block transition lg:hover:scale-105 duration-300" href="./contact.html">
                         <h4 class="text-xl mb-3">Contact</h4>
-                        <p>Want to pick my brain? Got a question for me? Here's how you can get in touch with me, if I feel like responding. Feel free to reach out.</p>
+                        <p>Want to pick my brain? Got a question for me? Here's how you can get in touch with me. Feel free to reach out for queries and collaboration.</p>
                     </a>
                 </section>
             </div>
@@ -148,7 +150,7 @@
     <footer class="bg-timberwolf border-t-2 border-chocolatecosmos-default">
         <div class="container px-6 pt-5 mx-auto">
             <div class="flex flex-col items-center text-center">
-                    <img class="w-14 lg:w-16 h-auto" src="./assets/img/jo-custom-logo-sym.png" alt="Logo">
+                    <img class="w-14 lg:w-16 h-auto" src="./assets/img/jo-custom-logo-moon-gray.png" alt="Logo">
     
                 <div class="flex flex-wrap justify-center mt-3 -mx-4">
                     <a href="./index.html" class="mx-3 text-licorice-default transition hover:text-chocolatecosmos-default">home</a>
